# skills-utils

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: .nojekyll  index.html  manifest-schema.md  release-notes-snippet.md  troubleshooting.html  troubleshooting.md
node/: package-lock.json  package.json
node/src/: agents.ts  cli.ts  config.ts  doctor-fix.ts  doctor.ts  github.ts  hash.ts  progress.ts  repoParse.ts  repos.ts  scanner.ts  status.ts  sync.ts  ui.ts
node/tests/: hash.test.js
plans/: README.md
plans/skills-sync-cli/: plan.md
python/: pyproject.toml
python/src/skills_utils/: __init__.py  __main__.py  agents.py  cli.py  config_loader.py  doctor.py  github.py  hash.py  progress.py  repo_parse.py  repos.py  scanner.py  status_cmd.py  sync.py  ui.py
python/tests/: test_github.py  test_hash.py  test_manifest.py  test_repo_parse.py  test_sync.py
scripts/: bump-version.sh  generate-docs-sitemap.py  gh-publish-setup.sh  publish.sh
